modifiqué el html y agregué sonido

--- a/Clase 3/CV-RP.html
+++ b/Clase 3/CV-RP.html
@@ -11,7 +11,8 @@
 
 <body>
     <h1>
-        PROFESSIONAL WEBMASTER - CV DE ALUMNO
+        <p style="color: red;">PROFESSIONAL WEBMASTER - CV DE ALUMNO</p>
+        
     </h1>
 
     <h2> 
@@ -19,37 +20,38 @@
     </h2> 
    
     <h2><b> <u>Fotografia</u></b></h2>
-    <img src="Imagenes/rpe.jpg" alt="Foto de Ruben Pesoa" style="max-width: 10%;" >
+    &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp <img src="Imagenes/rpe.jpg" alt="Foto de Ruben Pesoa" style="max-width: 10%;" >
 
     <h2><b><u>Datos Personales:</u></b></h2>
     <ul>
-        <li><u>Ciudad:</u>: Capital Federal</li>
+        <li><u>Ciudad:</u> Capital Federal</li>
         <li><u>Profesion:</u>Ingeniero Industrial</li>
         <li><u>Estado Civil:</u>Soltero</li>
         <li><u>Edad:</u>31 años</li>
         <li><u>Deporte Favorito:</u>Futbol</li>
-        <li><u>Musica Favorita:</u> Los Redondos</li>
+        <li><u>Pasiones:</u> Estudio del  Espacio </li>
         
     </ul>
 
 <h2><b><u>En caso de querer contactarse con el alumno, por favor dejar los datos en el siguiente formulario:</u></b></h1>
     <form>
-        <label>Nombre y Apellido</label> <input>
-        <label>Telefono Celular</label> <input>
-        <label>Mail</label><input>
-        <label>Comentarios:</label> <input>
+        <label> <b>Nombre y Apellido: </b> </label> &nbsp &nbsp; <input> <br />
+        <label> <b>Celular:</b></label> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp <input><br />
+        <label> <b>Mail:</b></label> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp &nbsp &nbsp  &nbsp &nbsp  <input><br />
+        <label> <b>Comentarios:</b></label> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp   <input><br />
+       <br/>
 
-        <button>Enviar</button>
+       &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  <button>Enviar</button>
 </form>
 
 </body>
 
+    <h4> <u>Disfrutá de la siguiente dia antes de continuar con tu dia:</u></h4>
+    <audio src="Sonidos/Musica.mp3" controls></audio>
+
 <footer>
-    <h3>
-        La informacion aqui presentada es confidencial y su uso quedará sujeto a multas y penas bajo las leyes del <a href="https://es.wikipedia.org/wiki/Principado_de_Sealand" target="_blank"> Principado de Sealand </a>
-    </h3>
+    <h4>
+        <i>La informacion aqui presentada es confidencial y su uso quedará sujeto a multas y penas bajo las leyes del <a href="https://es.wikipedia.org/wiki/Principado_de_Sealand" target="_blank"> Principado de Sealand </a></i>
+    </h4>
     </footer>
-
-   
-
 </html>
