modifique la estructura del html

--- a/Clase 3/CV-RP.html
+++ b/Clase 3/CV-RP.html
@@ -20,7 +20,7 @@
     </h2> 
    
     <h2><b> <u>Fotografia</u></b></h2>
-    &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp <img src="Imagenes/rpe.jpg" alt="Foto de Ruben Pesoa" style="max-width: 10%;" >
+    &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp <img src="Imagenes/rpe.jpg" alt="Foto de Ruben Pesoa" style="max-width: 10%;" title="Ruben Pesoa" >
 
     <h2><b><u>Datos Personales:</u></b></h2>
     <ul>
@@ -28,20 +28,22 @@
         <li><u>Profesion:</u>Ingeniero Industrial</li>
         <li><u>Estado Civil:</u>Soltero</li>
         <li><u>Edad:</u>31 años</li>
-        <li><u>Deporte Favorito:</u>Futbol</li>
+        <li><u>Deporte Favorito</u>:Futbol</li>
         <li><u>Pasiones:</u> Estudio del  Espacio </li>
         
     </ul>
-
 <h2><b><u>En caso de querer contactarse con el alumno, por favor dejar los datos en el siguiente formulario:</u></b></h1>
     <form>
-        <label> <b>Nombre y Apellido: </b> </label> &nbsp &nbsp; <input> <br />
-        <label> <b>Celular:</b></label> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp <input><br />
-        <label> <b>Mail:</b></label> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp &nbsp &nbsp  &nbsp &nbsp  <input><br />
-        <label> <b>Comentarios:</b></label> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp   <input><br />
+        <label> <b>Nombre y Apellido: </b> </label> &nbsp &nbsp; <input type="text" name="nombre"> <br />
+        <label> <b>Celular:</b></label> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp <input type="number"><br />
+        <label> <b>Mail:</b></label> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp &nbsp &nbsp  &nbsp &nbsp  <input type="email"><br />
+        <label> <b>Comentarios:</b></label> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp   <input type="text"><br />
        <br/>
 
-       &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  <button>Enviar</button>
+    &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  <button>Enviar</button>
+
+
+   
 </form>
 
 </body>
