hice modificaciones en el CSS

--- a/Clase 4/CV-RP Rev.01.html
+++ b/Clase 4/CV-RP Rev.01.html
@@ -19,6 +19,7 @@
         i{
             color: white;
         }
+      
     </style>
 </head>
 
@@ -33,7 +34,7 @@
     </h2> 
    
     <h2><b> <u>Fotografia</u></b></h2>
-    &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp <img src="Imagenes/rpe01.jpg" alt="Foto de Ruben Pesoa" style="max-width: 10%;" title="Ruben Pesoa" >
+    <img src="Imagenes/rpe01.jpg" alt="Foto de Ruben Pesoa" style="max-width: 10%;" title="Ruben Pesoa" >
 
     <h2><b><u>Datos Personales:</u></b></h2>
     <ul>
@@ -46,6 +47,7 @@
         
     </ul>
 <h2><b><u>En caso de querer contactarse con el <span class="resaltado02">alumno</span>, por favor dejar los datos en el siguiente formulario:</u></b></h1>
+    <div class="datospersonales" id="datospersonales">
     <form>
         <label> <b>Nombre y Apellido: </b> </label>; <input type="text" name="nombre"> <br />
         <label> <b>Celular:</b></label>  <input type="number"><br />
@@ -58,10 +60,10 @@
 
    
 </form>
-
+</div>
 </body>
 
-    <h4> <u>Disfrutá de la siguiente dia antes de continuar con tu dia:</u></h4>
+    <h4> <u>Disfrutá de la siguiente musica dia antes de continuar con tu dia:</u></h4>
     <audio src="Sonidos/Britons.mp3" controls></audio>
 
 <footer>
