--- a/Clase 6/tarea02.html
+++ b/Clase 6/tarea02.html
@@ -6,20 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tarea02</title>
     <link rel="stylesheet" href="tarea02.css">
-    <style>
-        .h3{
-            color: white;
-            font-size: 20px;
-            align-content: center;
-        }
-    </style>
+
 </head>
 
 <body>
     <div class="contenedor">
-        <div class="caja1"><h3>1</h3></div>
-        <div class="caja2"><h3>2</h3></div>
-        <div class="caja3"><h3>3</h3></div>
+        <div class="caja1">1</div>
+        <div class="caja2">2</div>
+        <div class="caja3">3</div>
 
     </div> 
     
