--- a/Clase 10 - Sitio De Transportes (Completo)/sitio_transportes/galeria.html
+++ b/Clase 10 - Sitio De Transportes (Completo)/sitio_transportes/galeria.html
@@ -8,9 +8,9 @@
     <title>Sitio Transporte</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="transportes.css">
-
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/transportes.css">
+    
 </head>
 
 <body>
